builds/cluster-metal/grafana/build.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-grafana
  namespace: grafana
spec:
  hostnames:
  - metal-grafana.shamrock.systems
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: http-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: grafana-service
      port: 3000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
